--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
 <body>
     <header>
         <div> 
-        <img src="logo2.png" class="logoinst"
+        <img src="logo2.jpg" class="logoinst"
       </div>
         <div class="container">
             <div class="hero-content">
