--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
             <div class="hero-content">
                 <div class="logo">
                     <h1>Escola Educacional São José</h1>
-                    <p class="subtitle">EDUCANDO PARA O FUTURO </p>
+                    <p class="subtitle">Preparada para o presente, construída para o futuro </p>
                     <p class="location"></p>
                 </div>
             </div>
@@ -508,7 +508,7 @@
         <section id="historia" class="card historia">
             <h2>Nossa História</h2>
             <p>
-                A Escola Educacional São José iniciou suas atividades há quase 40 anos na cidade de Santa Rita, 
+                A Escola Educacional São José iniciou suas atividades há 32 anos na cidade de Santa Rita, 
                 especificamente no bairro de Tibiri II. Desde então, tem sido um pilar fundamental na educação 
                 da comunidade local, formando gerações de estudantes com valores sólidos e conhecimento de qualidade.
             </p>
@@ -526,9 +526,9 @@
 
             <div class="info-cards">
                 <div class="info-card">
-                    <span class="number">40</span>
+                    <span class="number">32</span>
                     <h3>Anos de História</h3>
-                    <p>Quase quatro décadas educando com amor</p>
+                    <p>Mais de Três décadas educando com amor</p>
                 </div>
                 <div class="info-card">
                     <span class="number">9</span>
@@ -611,7 +611,7 @@
             <div class="info-cards">
                 <div class="info-card">
                     <h3>📍 Localização</h3>
-                    <p>Tibiri II<br>Santa Rita - PB</p>
+                    <p>Tibiri II<br> Rua Manaira 115, Santa Rita - PB</p>
                 </div>
                 <div class="info-card">
                     <h3>🎯 Níveis de Ensino</h3>
